# MyTube

./: README.md  app.py  download.py  main.py  pyproject.toml
static/css/: channel.css  comments.css  playlist.css  searchStyle.css  topBar.css  watch.css
static/js/: channel.js  moreResults.js  playlist.js  watch.js
templates/: channel.html  channel_result.html  comments.html  index.html  more_results.html  playlist.html  playlist_result.html  result.html  top_bar.html  video_player.html  watch.html
