[tool.poetry]
name = "mytube"
version = "0.1.0"
description = ""
authors = ["GeraAG <ag.andrew.gerasimenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
